manifests/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-non-www
spec:
  redirectRegex:
    regex: "^https://www.(.*)"
    replacement: "https://${1}"
    permanent: true
