manifests/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
  - name: http
    port: 8080
    targetPort: web
    protocol: TCP
  - name: https
    port: 8443
    targetPort: websecure
    protocol: TCP
  type: ClusterIP
