manifests/traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-api-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`iyata.duckdns.org`)
    kind: Rule
    services:
    - name: go-api-service-1
      port: 4000
  - match: Host(`api.iyata.duckdns.org`)
    kind: Rule
    services:
    - name: go-api-service-1
      port: 4000
  - match: Host(`www.iyata.duckdns.org`)
    kind: Rule
    services:
    - name: go-api-service-1
      port: 4000
  tls:
    certResolver: letsencrypt
